Added route to add / update a user as an admin
